class Mensaje {

    public void mensaje(String texto) {
        System.out.print(texto);
    }

    public void mensajeLn(String texto) {
        System.out.println(texto);
    }
}
